--- a/src/components/firstSection/styles.module.scss
+++ b/src/components/firstSection/styles.module.scss
@@ -7,8 +7,18 @@
 
   .abstractFirstSection {
     position: absolute;
-    margin-top: -15rem;
-    width: 1920px;
+    margin-top: -27rem;
+    width: 100%;
+    height: 650px;
+  }
+  .retangleEffectFirstSection {
+    position: absolute;
+    width: 100%;
+    height: 710px;
+
+    margin-bottom: -8rem;
+    background: rgb(54,27,79);
+    background: linear-gradient(0deg, rgba(54,27,79,1) 35%, rgba(0,212,255,0) 100%);
   }
 
   .Container {
