--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -207,7 +207,25 @@
     }
 
     .textBottomMobile {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
       margin-top: 4rem;
+
+      h1 {
+        z-index: 1;
+        color: #ffffff;
+        font-family: Montserrat;
+        font-size: 17px;
+        font-weight: bold;
+        font-style: normal;
+        text-align: left;
+        text-transform: uppercase;
+
+        margin-top: 1rem;
+        margin-right: 3.5rem;
+      }
     }
 
     .logoDoPartido {
