--- a/src/components/firstSection/styles.module.scss
+++ b/src/components/firstSection/styles.module.scss
@@ -92,8 +92,9 @@
 
   .abstractFirstSection {
     position: absolute;
-    margin-top: -15rem;
+    margin-top: -25rem;
     width: 1080px;
+    height: 1500px;
     overflow: hidden;
   }
 
