--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -96,7 +96,8 @@
 @media only screen and (max-width: 700px) {
   .headerContainer {
     height: 5rem;
-    margin-top: -550rem;
+    margin-top: -580rem;
+    margin-left: 3.5rem;
     position: absolute;
 
     z-index: 1;
