--- a/src/components/secondSection/carouseItems/styles.module.scss
+++ b/src/components/secondSection/carouseItems/styles.module.scss
@@ -93,7 +93,7 @@
         width: 655px;
         height: 189px;
         color: #26417e;
-        font-family: Now;
+        font-family: Montserrat;
         font-size: 34px;
         font-weight: 700;
         font-style: normal;
