--- a/src/components/firstSection/styles.module.scss
+++ b/src/components/firstSection/styles.module.scss
@@ -120,13 +120,14 @@
       position: absolute;
       margin-top: 115rem;
 
-      width: 648px;
-      height: 329px;
+      width: 500px;
+      height: 402px;
     }
 
     .candidateName {
       position: absolute;
       margin-top: -100rem;
+      margin-left: 2rem;
 
       width: 980px;
       height: 231px;
